--- a/Identity3_0/Views/Person/Index.cshtml
+++ b/Identity3_0/Views/Person/Index.cshtml
@@ -25,7 +25,7 @@
     }
     else
     {
-        <table class="table table-active table-striped table-hover rounded">
+        <table class="table table-active table-striped table-hover rounded mt-3">
             <caption>List of all people</caption>
             <thead>
                 <tr class="d-table-row">
