--- a/Identity3_0/Views/Person/Create.cshtml
+++ b/Identity3_0/Views/Person/Create.cshtml
@@ -10,7 +10,7 @@
 <div class="shadow border col-3 mt-3">
     <form asp-action="Create" asp-controller="Person" method="post">
         @Html.AntiForgeryToken()
-        <div asp-validation-summary="ModelOnly" class="text-danger font-weight-bold"></div>
+        <div asp-validation-summary="All" class="text-danger font-weight-bold"></div>
         <div class="form-group">
             <label asp-for="Person.FirstName" class="control-label"></label>
             <input asp-for="Person.FirstName" class="form-control" autofocus />
