--- a/Identity3_0/Views/Person/Delete.cshtml
+++ b/Identity3_0/Views/Person/Delete.cshtml
@@ -39,8 +39,8 @@
     <hr />
 
     <div class="btn-group mb-2">
-        <form asp-action="Delete" asp-controller="Person" asp-route-id="@Model.Id" method="post">
-            @Html.AntiForgeryToken()
+        <form asp-action="Delete" asp-controller="Person" asp-route-id="@Model.Id">
+            @*@Html.AntiForgeryToken()*@
         <input type="submit" class="btn btn-danger" value="Delete" />
         </form>
         &nbsp; | &nbsp;
