--- a/Identity3_0/Views/Person/_person.cshtml
+++ b/Identity3_0/Views/Person/_person.cshtml
@@ -17,7 +17,7 @@
     else
     {
         <td class="d-table-cell">
-            @Model.City
+            @Model.City.Name
         </td>
     }
     <td class="d-table-cell">
