--- a/Identity3_0/Views/Shared/_EDD_Buttons.cshtml
+++ b/Identity3_0/Views/Shared/_EDD_Buttons.cshtml
@@ -4,5 +4,5 @@
 *@
 
 <a asp-action="Edit" asp-route-id="@Model"><i class="fas fa-edit"></i></a>
-<a asp-action="Details" asp-route-id="@Model" class="btn btn-primary btn-sm ml-1">Details</a>
-<a asp-action="Delete" asp-route-id="@Model" class="btn btn-danger btn-sm ml-1">Delete</a>
+<a asp-action="Details" asp-route-id="@Model"><i class="fas fa-info-circle"></i></a>
+<a asp-action="Delete" asp-route-id="@Model"><i class="far fa-window-close"></i></a>
