--- a/Identity3_0/Views/Person/Index.cshtml
+++ b/Identity3_0/Views/Person/Index.cshtml
@@ -8,17 +8,10 @@
 <partial name="_CreateButton" />
 
 <div class="container shadow border mt-3">
-    @*@if (ViewBag.message != null) --- Fix this later. ---
-        {
-            if (ViewBag.message.Contains("Created"))
-            {
-                <div class="text-success font-weight-bold">@ViewBag.message</div>
-            }
-            else
-            {
-                <div class="text-danger font-weight-bold">@ViewBag.message</div>
-            }
-        }*@
+    @if (ViewBag.message != null)
+    {
+        <div class="container text-success font-weight-bold">@ViewBag.message</div>
+    }
     @if (Model.Count == 0)
     {
         <div class="text-danger font-weight-bold">No people are available. Please try again later.</div>
