--- a/Identity3_0/Views/_ViewImports.cshtml
+++ b/Identity3_0/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
-﻿@using Identity3_0
+﻿@using Microsoft.AspNetCore.Identity
+
+@using Identity3_0
 @using Identity3_0.Models
 @using Identity3_0.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
