--- a/Identity3_0/Views/_ViewImports.cshtml
+++ b/Identity3_0/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 
 @using Identity3_0
-@using Identity3_0.Models
-@using Identity3_0.ViewModels
+@using DataAccessLibrary.Models
+@using DataAccessLibrary.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
