--- a/Identity3_0/Views/Account/Register.cshtml
+++ b/Identity3_0/Views/Account/Register.cshtml
@@ -22,31 +22,31 @@
         <h1>Register</h1>
         <hr />
 
-        <div asp-validation-summary="ModelOnly"></div>
+        <div asp-validation-summary="ModelOnly" class="text-danger font-weight-bold col-12"></div>
         @Html.AntiForgeryToken()
         <div class="form-group">
             <label class="control-label" asp-for="FirstName"></label>
-            <input class="form-control" asp-for="FirstName" autofocus />
+            <input class="form-control" asp-for="FirstName" placeholder="Firstname" autofocus />
             <span class="text-danger font-weight-bold" asp-validation-for="FirstName"></span>
         </div>
         <div class="form-group">
             <label class="control-label" asp-for="LastName"></label>
-            <input class="form-control" asp-for="LastName" />
+            <input class="form-control" asp-for="LastName" placeholder="Lastname" />
             <span class="text-danger font-weight-bold" asp-validation-for="LastName"></span>
         </div>
         <div class="form-group">
             <label class="control-label" asp-for="Email"></label>
-            <input id="EmailRegistration" class="form-control" asp-for="Email" />
+            <input id="EmailRegistration" class="form-control" asp-for="Email" placeholder="Email" />
             <span id="EmailRegistrationVali" class="text-danger font-weight-bold" asp-validation-for="Email"></span>
         </div>
         <div class="form-group">
             <label class="control-label" asp-for="Age"></label>
-            <input class="form-control" asp-for="Age" />
+            <input class="form-control" asp-for="Age" placeholder="Age" />
             <span class="text-danger font-weight-bold" asp-validation-for="Age"></span>
         </div>
         <div class="form-group">
             <label class="control-label" asp-for="PhoneNumber"></label>
-            <input class="form-control" asp-for="PhoneNumber" />
+            <input class="form-control" asp-for="PhoneNumber" placeholder="Phonenumber" />
             <span class="text-danger font-weight-bold" asp-validation-for="PhoneNumber"></span>
         </div>
         @if (User.IsInRole("Administrator"))
@@ -58,16 +58,16 @@
         }
         <div class="form-group">
             <label class="control-label" asp-for="Password"></label>
-            <input class="form-control" asp-for="Password" />
+            <input class="form-control" asp-for="Password" placeholder="Password" />
             <span class="text-danger font-weight-bold" asp-validation-for="Password"></span>
         </div>
         <div class="form-group">
             <label class="control-label" asp-for="PasswordConfirmation"></label>
-            <input class="form-control" asp-for="PasswordConfirmation" type="password" />
+            <input class="form-control" asp-for="PasswordConfirmation" type="password" placeholder="Confirm password" />
             <span class="text-danger font-weight-bold" asp-validation-for="PasswordConfirmation"></span>
         </div>
         <div class="form-group">
-            <input type="submit" value="Submit" class="btn btn-primary btn-sm" />
+            <input id="registerSubmitBtn" type="submit" value="Submit" class="btn btn-primary btn-sm" />
         </div>
     </form>
 </div>
