--- a/Identity3_0/Views/Shared/_Layout.cshtml
+++ b/Identity3_0/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <script src="https://kit.fontawesome.com/10e2288754.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/10e2288754.js" crossorigin="anonymous" SameSite="None"></script>
 </head>
 <body>
     <header>
@@ -39,23 +39,23 @@
                     <ul class="navbar-nav ml-auto">
                         <partial name="_LoginPartial" />
                         @*@if (User.Identity.IsAuthenticated)
-                        {
-                            if (User.IsInRole("Administrator"))
                             {
+                                if (User.IsInRole("Administrator"))
+                                {
+                                    <li class="nav-item">
+                                        <a class="nav-link btn text-dark" asp-controller="Account" asp-action="Users"><i class="fas fa-users"></i> Users</a>
+                                    </li>
+                                }
                                 <li class="nav-item">
-                                    <a class="nav-link btn text-dark" asp-controller="Account" asp-action="Users"><i class="fas fa-users"></i> Users</a>
+                                    <a class="nav-link btn text-dark" asp-controller="Account" asp-action="Details"><i class="fas fa-user-secret"></i> Profile</a>
                                 </li>
                             }
-                            <li class="nav-item">
-                                <a class="nav-link btn text-dark" asp-controller="Account" asp-action="Details"><i class="fas fa-user-secret"></i> Profile</a>
-                            </li>
-                        }
-                        else
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link btn text-dark" asp-controller="Account" asp-action="SignIn"><i class="fa fa-user"></i> Sign in</a>
-                            </li>
-                        }*@
+                            else
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link btn text-dark" asp-controller="Account" asp-action="SignIn"><i class="fa fa-user"></i> Sign in</a>
+                                </li>
+                            }*@
                     </ul>
                 </div>
             </div>
