--- a/Identity3_0/Views/Shared/_Layout.cshtml
+++ b/Identity3_0/Views/Shared/_Layout.cshtml
@@ -37,25 +37,7 @@
                         }
                     </ul>
                     <ul class="navbar-nav ml-auto">
-                        <partial name="_LoginPartial" />
-                        @*@if (User.Identity.IsAuthenticated)
-                            {
-                                if (User.IsInRole("Administrator"))
-                                {
-                                    <li class="nav-item">
-                                        <a class="nav-link btn text-dark" asp-controller="Account" asp-action="Users"><i class="fas fa-users"></i> Users</a>
-                                    </li>
-                                }
-                                <li class="nav-item">
-                                    <a class="nav-link btn text-dark" asp-controller="Account" asp-action="Details"><i class="fas fa-user-secret"></i> Profile</a>
-                                </li>
-                            }
-                            else
-                            {
-                                <li class="nav-item">
-                                    <a class="nav-link btn text-dark" asp-controller="Account" asp-action="SignIn"><i class="fa fa-user"></i> Sign in</a>
-                                </li>
-                            }*@
+                        <partial name="_LoginPartial" model="ViewBag.id == null ? null : ViewBag.id" />
                     </ul>
                 </div>
             </div>
@@ -69,7 +51,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.Now.Year - Identity3_0 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; @DateTime.Now.Year - Micael Ståhl - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
