--- a/Identity3_0/Views/Account/Edit.cshtml
+++ b/Identity3_0/Views/Account/Edit.cshtml
@@ -1,30 +1,20 @@
-﻿@model RegisterUser
+﻿@model FrontUser
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Register user</h1>
+<h1>Edit</h1>
 <hr />
 <partial name="_GoBackButton" />
 
-@if (ViewBag.created != null)
-{
-    <div class="container col-4 text-success font-weight-bold">@ViewBag.created</div>
-}
-
-@if (ViewBag.error != null)
-{
-
-    <div class="container col-4 text-danger font-weight-bold">@ViewBag.error</div>
-}
-
 <div class="col-3 shadow border mt-3">
-    <form asp-action="Register" asp-controller="Account" method="post">
-        <h1>Register</h1>
+    <form asp-action="Edit" asp-controller="Account" method="post">
+        <h1>Update information</h1>
         <hr />
 
         <div asp-validation-summary="ModelOnly" class="text-danger font-weight-bold col-12"></div>
         @Html.AntiForgeryToken()
+        <input type="hidden" asp-for="Id" />
         <div class="form-group">
             <label class="control-label" asp-for="FirstName"></label>
             <input class="form-control" asp-for="FirstName" placeholder="Firstname" autofocus />
@@ -57,16 +47,6 @@
                 <input class="form-inline" asp-for="IsAdmin" />
             </div>
         }
-        <div class="form-group">
-            <label class="control-label" asp-for="Password"></label>
-            <input class="form-control" asp-for="Password" placeholder="Password" />
-            <span class="text-danger font-weight-bold" asp-validation-for="Password"></span>
-        </div>
-        <div class="form-group">
-            <label class="control-label" asp-for="PasswordConfirmation"></label>
-            <input class="form-control" asp-for="PasswordConfirmation" type="password" placeholder="Confirm password" />
-            <span class="text-danger font-weight-bold" asp-validation-for="PasswordConfirmation"></span>
-        </div>
         <div class="form-group">
             <input id="registerSubmitBtn" type="submit" value="Submit" class="btn btn-primary btn-sm" />
         </div>
