--- a/Identity3_0/Views/Person/Create.cshtml
+++ b/Identity3_0/Views/Person/Create.cshtml
@@ -46,7 +46,7 @@
                 {
                     foreach (var item in Model.Cities)
                     {
-                        <option value="@item.Id">@item.Name</option>
+                        <option value="@item.Key">@item.Value</option>
                     }
                 }
             </select>
