--- a/Identity3_0/Views/Person/Edit.cshtml
+++ b/Identity3_0/Views/Person/Edit.cshtml
@@ -7,7 +7,6 @@
     var activeCity = Model.Person.City ?? null;
 }
 
-
 <h1>Editing @Model.Person.FirstName</h1>
 <hr />
 <partial name="_GoBackButton" />
@@ -54,9 +53,9 @@
 
                 @foreach (var item in Model.Cities)
                 {
-                    if (item != activeCity)
+                    if (item.Value != activeCity.Name)
                     {
-                        <option value="@item.Id">@item.Name</option>
+                        <option value="@item.Key">@item.Value</option>
                     }
                 }
             </select>
