Further progress on City

--- a/Identity3_0/Views/Person/Details.cshtml
+++ b/Identity3_0/Views/Person/Details.cshtml
@@ -11,7 +11,7 @@
 
     @if (ViewBag.message != null)
     {
-        <div class="text-success font-weight-bold updatedPerson">@ViewBag.message</div>
+        <div class="text-success font-weight-bold updatedText">@ViewBag.message</div>
     }
 
     <div class="form-group">
@@ -48,10 +48,3 @@
         <partial name="_ED_Buttons" model="@Model.Id" />
     </div>
 </div>
-
-@if (ViewBag.message != null)
-{ // No reason to load this script unless the value it's supposed to change is active.
-    <script>
-        setTimeout(() => $(".updatedPerson").fadeOut(), 3000)
-    </script>
-}
