--- a/Identity3_0/Views/Person/Index.cshtml
+++ b/Identity3_0/Views/Person/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Person>
+﻿@model PersonListWithMessage
 @{
     ViewData["Title"] = "Index";
 }
@@ -10,9 +10,9 @@
 <div class="container shadow border mt-3">
     @if (ViewBag.message != null)
     {
-        <div class="container text-success font-weight-bold">@ViewBag.message</div>
+        <div class="container text-success font-weight-bold updatedText">@ViewBag.message</div>
     }
-    @if (Model.Count == 0)
+    @if (Model.People.Count == 0)
     {
         <div class="text-danger font-weight-bold">No people are available. Please try again later.</div>
     }
@@ -31,7 +31,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var item in Model)
+                @foreach (var item in Model.People)
                 {
                     <partial name="_person" model="item" />
                 }
