--- a/Identity3_0/Views/Account/Edit.cshtml
+++ b/Identity3_0/Views/Account/Edit.cshtml
@@ -7,7 +7,7 @@
 <hr />
 <partial name="_GoBackButton" />
 
-<div class="col-3 shadow border mt-3">
+<div class="col-3 shadow border">
     <form asp-action="Edit" asp-controller="Account" method="post">
         <h1>Update information</h1>
         <hr />
