--- a/Identity3_0/Views/Person/Delete.cshtml
+++ b/Identity3_0/Views/Person/Delete.cshtml
@@ -7,7 +7,7 @@
 <hr />
 <partial name="_GoBackButton" />
 
-<div class="shadow border mt-3 col-3">
+<div class="shadow border col-3">
     <div class="form-group">
         <label class="font-weight-bold"><ins>Full name</ins></label>
         <div>@Model.FirstName @Model.LastName</div>
