--- a/Identity3_0/Views/Person/Edit.cshtml
+++ b/Identity3_0/Views/Person/Edit.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <partial name="_GoBackButton" />
 
-<div class="shadow border col-3 mt-3">
+<div class="shadow border col-3">
     <form asp-action="Edit" asp-controller="Person" method="post">
         @Html.AntiForgeryToken()
         <div asp-validation-summary="All" class="text-danger font-weight-bold"></div>
