--- a/Identity3_0/Views/Person/Index.cshtml
+++ b/Identity3_0/Views/Person/Index.cshtml
@@ -7,7 +7,7 @@
 <hr />
 <partial name="_CreateButton" />
 
-<div class="container shadow border mt-3">
+<div class="container shadow border">
     @if (ViewBag.message != null)
     {
         <div class="container text-success font-weight-bold updatedText">@ViewBag.message</div>
