--- a/Identity3_0/Views/Account/EditUserEmail.cshtml
+++ b/Identity3_0/Views/Account/EditUserEmail.cshtml
@@ -7,7 +7,7 @@
 <hr />
 <partial name="_GoBackButton" />
 
-<div class="col-3 shadow border mt-3">
+<div class="col-3 shadow border">
     <form asp-action="EditUserEmail" asp-controller="Account">
         <h1>Update email</h1>
         <hr />
