--- a/Identity3_0/Views/Account/EditUserPassword.cshtml
+++ b/Identity3_0/Views/Account/EditUserPassword.cshtml
@@ -7,7 +7,7 @@
 <hr />
 <partial name="_GoBackButton" />
 
-<div class="col-3 shadow border mt-3">
+<div class="col-3 shadow border">
     <form asp-action="EditUserPassword" asp-controller="Account">
 
         @Html.AntiForgeryToken()
