--- a/Identity3_0/Views/Account/Profile.cshtml
+++ b/Identity3_0/Views/Account/Profile.cshtml
@@ -13,7 +13,7 @@
 <p class="container">Expand on this page later on.</p>
 
 <div>
-    <div class="col-4 shadow border float-left mt-3">
+    <div class="col-4 shadow border float-left">
 
         <div class="form-group">
             <label class="control-label font-weight-bold">Fullname</label>
