--- a/Identity3_0/Views/Account/Register.cshtml
+++ b/Identity3_0/Views/Account/Register.cshtml
@@ -18,7 +18,7 @@
     <div class="container col-4 text-danger font-weight-bold">@ViewBag.error</div>
 }
 
-<div class="col-3 shadow border mt-3">
+<div class="col-3 shadow border">
     <form asp-action="Register" asp-controller="Account" method="post">
         <h1>Register</h1>
         <hr />
