--- a/Identity3_0/Views/City/AddPeople.cshtml
+++ b/Identity3_0/Views/City/AddPeople.cshtml
@@ -7,7 +7,7 @@
 <hr />
 <partial name="_GoBackButton" />
 
-<div class="col-8 border shadow mt-3">
+<div class="col-8 border shadow">
     <h1>Choose what people to add to @Model.City.Value.</h1>
     <hr />
     @if (Model.People == null || Model.People.Count == 0)
