--- a/Identity3_0/Views/Person/Details.cshtml
+++ b/Identity3_0/Views/Person/Details.cshtml
@@ -7,7 +7,7 @@
 <hr />
 <partial name="_GoBackButton" />
 
-<div class="shadow border mt-3 col-3">
+<div class="shadow border col-3">
 
     @if (ViewBag.message != null)
     {
