--- a/Identity3_0/Views/Shared/_CreateButton.cshtml
+++ b/Identity3_0/Views/Shared/_CreateButton.cshtml
@@ -2,4 +2,11 @@
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
-<a asp-action="Create" class="btn btn-primary btn-sm mt-2">Create</a>
+@if (User.Identity.IsAuthenticated)
+{
+    <a asp-action="Create" class="btn btn-primary btn-sm mt-2 mb-3">Create</a>
+}
+else
+{
+    <a asp-action="SignIn" asp-controller="Account" class="mt-2 mb-3">Sign in to create.</a>
+}
