--- a/Identity3_0/Views/Shared/_GoBackButton.cshtml
+++ b/Identity3_0/Views/Shared/_GoBackButton.cshtml
@@ -2,4 +2,4 @@
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
-<a asp-action="Index" class="btn btn-primary btn-sm mt-2">Return to list</a>
+<a asp-action="Index" class="btn btn-primary btn-sm mt-2 mb-3">Return to list</a>
