--- a/Identity3_0/Views/Shared/_Layout.cshtml
+++ b/Identity3_0/Views/Shared/_Layout.cshtml
@@ -30,16 +30,16 @@
                             <a class="nav-link btn text-dark" asp-controller="Home" asp-action="World">World</a>
                         </li>
                         @if (Url.RouteUrl(Url).Contains("/World"))
-                        {
+                        { // This If statement makes these links ONLY appear if the url contains /World.
                             <li class="nav-item">
                                 <a class="nav-link btn text-dark" asp-controller="Person" asp-action="Index">People</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link btn text-dark" asp-controller="City" asp-action="Index">Cities</a>
-                            </li>
-                            @*@if (User.IsInRole("Administrator"))*@
-                            //{
-                            //}
+                            @if (User.IsInRole("Administrator"))
+                            { // And these only appear if the url contains /World and the user is an administrator.
+                                <li class="nav-item">
+                                    <a class="nav-link btn text-dark" asp-controller="City" asp-action="Index">Cities</a>
+                                </li>
+                            }
                         }
                     </ul>
                     <ul class="navbar-nav ml-auto">
