Further progress. Initiated start on sending emails.

--- a/Identity3_0/Views/Account/Register.cshtml
+++ b/Identity3_0/Views/Account/Register.cshtml
@@ -9,13 +9,12 @@
 
 @if (ViewBag.created != null)
 {
-    <div class="container col-4 text-success font-weight-bold">@ViewBag.created</div>
+    <div class="container col-4 text-success font-weight-bold updatedText">@ViewBag.created</div>
 }
 
 @if (ViewBag.error != null)
 {
-
-    <div class="container col-4 text-danger font-weight-bold">@ViewBag.error</div>
+    <div class="container col-4 text-danger font-weight-bold updatedText">@ViewBag.error</div>
 }
 
 <div class="col-3 shadow border">
