--- a/Identity3_0/Views/Shared/_LoginPartial.cshtml
+++ b/Identity3_0/Views/Shared/_LoginPartial.cshtml
@@ -15,6 +15,9 @@
         <li class="nav-item">
             <a class="nav-link btn text-dark" asp-action="Register" asp-controller="Account">Register new user</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link btn text-dark" asp-action="Users" asp-controller="Account"><i class="fas fa-users"></i> Users</a>
+        </li>
     }
     <li class="nav-item">
         <a asp-action="SignOut" asp-controller="Account" class="nav-link btn btn-link text-dark">Sign out</a>
