--- a/Identity3_0/Views/Account/EditUserEmail.cshtml
+++ b/Identity3_0/Views/Account/EditUserEmail.cshtml
@@ -7,7 +7,7 @@
 <hr />
 <partial name="_GoBackButton" />
 
-<div class="col-3 shadow border">
+<div class="col-3">
     <form asp-action="EditUserEmail" asp-controller="Account">
         <h1>Update email</h1>
         <hr />
@@ -16,12 +16,12 @@
         <div asp-validation-summary="ModelOnly" class="text-danger font-weight-bold"></div>
         <div class="form-group">
             <label asp-for="OldEmail"></label>
-            <input asp-for="OldEmail" placeholder="Old email" autofocus />
+            <input asp-for="OldEmail" value="@User.Identity.Name" placeholder="Old email" readonly />
             <span asp-validation-for="OldEmail" class="text-danger font-weight-bold"></span>
         </div>
         <div class="form-group">
             <label asp-for="NewEmail"></label>
-            <input asp-for="NewEmail" placeholder="New email" />
+            <input asp-for="NewEmail" placeholder="New email" autofocus />
             <span asp-validation-for="NewEmail" class="text-danger font-weight-bold"></span>
         </div>
         <div class="form-group">
