--- a/Identity3_0/Views/Account/Profile.cshtml
+++ b/Identity3_0/Views/Account/Profile.cshtml
@@ -13,7 +13,7 @@
 <p class="container">Expand on this page later on.</p>
 
 <div>
-    <div class="col-4 shadow border float-left">
+    <div class="col-4 shadow float-left">
 
         <div class="form-group">
             <label class="control-label font-weight-bold">Fullname</label>
@@ -63,7 +63,7 @@
         }
     </div>
 
-    <div class="ml-2 col-2 shadow border float-left mt-3">
+    <div class="ml-2 col-2 shadow float-left mt-3">
         <ul class="list-unstyled">
             @if (User.IsInRole("Administrator") && User.Identity.Name != Model.Email)
             { // This is only used for admins when they are not viewing their own profile.
@@ -75,7 +75,7 @@
                 <a asp-action="Edit" asp-controller="Account" asp-route-id="@Model.Id">Edit</a>
             </li>
             <li>
-                <a asp-action="EditUserEmail" asp-controller="Account" asp-route-id="@Model.Id">Edit email</a>
+                <a asp-action="EditUserEmail" asp-controller="Account" asp-route-email="@Model.Email">Edit email</a>
             </li>
             <li>
                 <a asp-action="EditUserPassword" asp-controller="Account" asp-route-id="@Model.Id">Change password (reset later)</a>
