--- a/Identity3_0/Views/Account/EditUserPassword.cshtml
+++ b/Identity3_0/Views/Account/EditUserPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ChangeUserPassword
 @{
-    ViewData["Title"] = "EditUserPassword";
+    ViewData["Title"] = "Update User-Password";
 }
 
 <h1>Update user-password</h1>
@@ -12,7 +12,7 @@
 
         @Html.AntiForgeryToken()
 
-        <input type="hidden" value="@ViewBag.Id" />
+        <input type="hidden" asp-for="UserId" value="@ViewBag.UserId" />
         <div asp-validation-summary="ModelOnly" class="text-danger font-weight-bold"></div>
         <div class="form-group">
             <label asp-for="OldPassword"></label>
