--- a/Identity3_0/Views/Account/SignIn.cshtml
+++ b/Identity3_0/Views/Account/SignIn.cshtml
@@ -12,6 +12,10 @@
     {
         <div class="text-success font-weight-bold updatedText">@ViewBag.message</div>
     }
+    else if (ViewBag.error != null)
+    {
+        <div class="text-danger font-weight-bold">@ViewBag.error</div>
+    }
 
     <h1>Sign in</h1>
     <hr />
@@ -35,6 +39,7 @@
         <div class="form-group">
             <input type="submit" value="Submit" class="btn btn-primary btn-sm" />
             <div class="float-right">Not registered? <a asp-action="Register" asp-controller="Account">Register</a></div>
+            <div>Forgotten password? Click <a asp-action="ForgottenPassword" asp-controller="Account">here</a></div>
         </div>
     </form>
 </div>
