Further progress on Country and also some slight readability modifications.

--- a/Identity3_0/Views/Shared/_GoBackButton.cshtml
+++ b/Identity3_0/Views/Shared/_GoBackButton.cshtml
@@ -2,4 +2,5 @@
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
+@* This "GoBack" button takes you back to the Index, which in this applications case, is also to the respective list of the object. *@
 <a asp-action="Index" class="btn btn-primary btn-sm mt-2 mb-3">Return to list</a>
