--- a/Identity3_0/Views/Shared/_Layout.cshtml
+++ b/Identity3_0/Views/Shared/_Layout.cshtml
@@ -39,6 +39,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link btn text-dark" asp-controller="City" asp-action="Index">Cities</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link btn text-dark" asp-controller="Country" asp-action="Index">Countries</a>
+                                </li>
                             }
                         }
                     </ul>
